fix rgb variables syntax

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -53,8 +53,8 @@
   --color-border: var(--color-grey--lighter);
   --color-border--section: var(--color-blue);
 
-  --color-overlay: rgba(var(--color--greyBlue--rgb), 0.8);
-  --color-overlay--dimmed: rgba(var(--color--white--rgb), 0.6);
+  --color-overlay: rgba(var(--color-greyBlue--rgb), 0.8);
+  --color-overlay--dimmed: rgba(var(--color-white--rgb), 0.6);
 
   /* Brand */
   --color-brand: var(--color-green);
@@ -112,8 +112,8 @@
   --color-grey--lightest: rgb(244, 244, 244);
   --color-grey--dark: rgb(118, 118, 118);
 
-  --color--greyBlue--rgb: 101, 120, 132;
-  --color-greyBlue: rgb(var(--color--greyBlue--rgb));
+  --color-greyBlue--rgb: 101, 120, 132;
+  --color-greyBlue: rgb(var(--color-greyBlue--rgb));
   --color-greyBlue--light: rgb(147, 161, 169);
   --color-greyBlue--lighter: rgb(193, 201, 206);
   --color-greyBlue--lightest: rgb(232, 235, 237);
