fix(components): improve Tabs accessibility (#576)
* change tab HTML elements and roles and update snapshots

* remove change to background color

* update ref type and add aria label on tab panel

Co-authored-by: Darryl Tec <darryl.t@getjobber.com>

--- a/packages/components/src/Tabs/Tabs.css
+++ b/packages/components/src/Tabs/Tabs.css
@@ -40,6 +40,14 @@
   -webkit-overflow-scrolling: touch;
 }
 
+ul.tabRow {
+  padding-inline-start: 0;
+}
+
+.tabRow li {
+  list-style: none;
+}
+
 .tab {
   flex: 0 0 auto;
   height: var(--tab--height);
@@ -49,7 +57,7 @@
   border: solid var(--border-base) var(--color-border);
   border-left-width: 0;
   outline: none;
-  background: transparent;
+  background: var(--color-surface);
   cursor: pointer;
   transition: all var(--timing-base);
 }
@@ -57,6 +65,10 @@
 .tab:hover,
 .tab:focus {
   background-color: var(--color-surface--hover);
+}
+
+.tab:focus span {
+  box-shadow: var(--shadow-focus);
 }
 
 .selected {
