--- a/packages/components/src/Spinner/Spinner.css
+++ b/packages/components/src/Spinner/Spinner.css
@@ -35,3 +35,19 @@
   margin-top: calc(var(--space-smaller) * -1);
   vertical-align: middle;
 }
+
+.wrapper {
+  position: relative;
+}
+
+.overlay {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-overlay--dimmed);
+  justify-content: center;
+  align-items: center;
+}
