--- a/packages/components/src/Typography/css/TextColors.css
+++ b/packages/components/src/Typography/css/TextColors.css
@@ -46,8 +46,16 @@
   color: var(--color-text);
 }
 
+.textReverse {
+  color: var(--color-text--reverse);
+}
+
 .textSecondary {
   color: var(--color-text--secondary);
+}
+
+.textSecondaryReverse {
+  color: var(--color-text--reverse--secondary);
 }
 
 .critical {
