cherry pick avatar changes from chip PR

--- a/packages/components/src/Avatar/Avatar.css
+++ b/packages/components/src/Avatar/Avatar.css
@@ -24,6 +24,10 @@
   --avatar-border-size: var(--border-thick);
 }
 
+.small {
+  --avatar-size: calc(var(--base-unit) * 1.5);
+}
+
 .isDark {
   color: var(--color-white);
 }
