clean up focus state on Avatar

--- a/packages/components/src/Avatar/Avatar.css
+++ b/packages/components/src/Avatar/Avatar.css
@@ -19,6 +19,11 @@
   background-size: cover;
 }
 
+.avatar:focus {
+  box-shadow: var(--shadow-focus);
+  outline: none;
+}
+
 .large {
   --avatar-size: calc(var(--base-unit) * 4.5);
   --avatar-border-size: var(--border-thick);
