--- a/packages/components/src/Chip/InternalChip.css
+++ b/packages/components/src/Chip/InternalChip.css
@@ -7,7 +7,8 @@
   color: var(--color-text--secondary);
   vertical-align: middle;
   background-color: var(--color-surface);
-  transition: all var(--timing-base) ease-in-out;
+  transition: var(--timing-base) ease-in-out;
+  transition-property: background-color, box-shadow, color;
   grid-template-columns: max-content;
   align-items: center;
   gap: var(--space-small);
