add required changes for chips #678

--- a/packages/design/src/icons/Colors.css
+++ b/packages/design/src/icons/Colors.css
@@ -41,3 +41,11 @@
 .orange {
   fill: var(--color-orange);
 }
+
+.criticalOnSurface {
+  fill: var(--color-critical--onSurface);
+}
+
+.disabled {
+  fill: var(--color-disabled);
+}
