--- a/packages/design/src/typography.css
+++ b/packages/design/src/typography.css
@@ -1,38 +1,4 @@
 :root {
-  --typography--lineHeight-large: 1.34;
-  --typography--lineHeight-base: 1.25;
-  --typography--lineHeight-tight: 1.2;
-  --typography--lineHeight-tighter: 1.143;
-  --typography--lineHeight-tightest: 1.12;
-  --typography--lineHeight-miniscule: 1.08;
-
-  --typography--fontSize-extravagant: calc(var(--base-unit) * 3); /* 48 */
-  --typography--fontSize-jumbo: calc(var(--base-unit) * 2.25); /* 36 */
-  --typography--fontSize-largest: calc(var(--base-unit) * 1.5); /* 24 */
-  --typography--fontSize-larger: calc(var(--base-unit) * 1.25); /* 20 */
-  --typography--fontSize-large: calc(var(--base-unit) * 1.125); /* 18 */
-  --typography--fontSize-base: calc(var(--base-unit) * 1); /* 16 */
-  --typography--fontSize-small: calc(var(--base-unit) * 0.875); /* 14 */
-  --typography--fontSize-smaller: calc(var(--base-unit) * 0.75); /* 12 */
-}
-
-@media (--handhelds) {
-  :root {
-    --typography--lineHeight-large: 32;
-    --typography--lineHeight-base: 24;
-    --typography--lineHeight-tight: 24;
-    --typography--lineHeight-tighter: 20;
-    --typography--lineHeight-tightest: 16;
-    --typography--lineHeight-miniscule: 16;
-
-    --typography--fontSize-extravagant: calc(var(--base-unit) * 2.5); /* 40 */
-    --typography--fontSize-jumbo: calc(var(--base-unit) * 1.75); /* 28 */
-    --typography--fontSize-largest: calc(var(--base-unit) * 1.375); /* 22 */
-
-    --typography--fontSize-larger: calc(var(--base-unit) * 1.375); /* 22 */
-    --typography--fontSize-large: calc(var(--base-unit) * 1.25); /* 20 */
-    --typography--fontSize-base: calc(var(--base-unit) * 1); /* 16 */
-    --typography--fontSize-small: calc(var(--base-unit) * 0.875); /* 14 */
-    --typography--fontSize-smaller: calc(var(--base-unit) * 0.75); /* 12 */
-  }
+  --typography--letterSpacing-base: 0;
+  --typography--letterSpacing-loose: calc(var(--base-unit) / 40);
 }
