--- a/packages/components/src/Typography/css/Emphasis.css
+++ b/packages/components/src/Typography/css/Emphasis.css
@@ -3,16 +3,13 @@
 }
 
 .highlight {
-  margin-left: calc(-1 * var(--space-smaller));
-  padding: 0 var(--space-smaller);
+  display: inline;
+  padding-bottom: var(--space-smaller);
   font-family: var(--typography--fontFamily-display);
+  font-style: normal;
   font-weight: inherit;
-  background-image: linear-gradient(
-    to left,
-    var(--color-brand--highlight),
-    var(--color-brand--highlight)
-  );
-  background-position: left 75%;
-  background-repeat: repeat-x;
-  background-size: 100% 52%;
+  background-image: url(https://getjobber.com/wp-content/uploads/jobber-assets/underline.6f5c72e0.svg);
+  background-position: center 80%;
+  background-repeat: no-repeat;
+  background-size: 100% 8px;
 }
