--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -15,12 +15,13 @@
   justify-content: space-between;
   padding: 0;
   border: none;
-  color: var(--color-greyBlue--lighter);
+  color: var(--color-text--reverse--secondary);
   font-family: "Poppins", sans-serif;
   font-size: var(--base-unit);
   font-weight: 700;
+  letter-spacing: 0.2px;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   background: none;
   cursor: pointer;
   transition: color var(--timing-base);
@@ -29,7 +30,7 @@
 
 .label:hover,
 .active {
-  color: var(--color-white);
+  color: var(--color-text-reverse);
 }
 
 /**
@@ -80,7 +81,7 @@
 
 .level2 .pageLabel.active,
 .level2 .pageLabel:hover {
-  color: var(--color-white);
+  color: var(--color-text-reverse);
 }
 
 .level2 .pageLabel.active::before {
