fix color variable syntax typo

--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -30,7 +30,7 @@
 
 .label:hover,
 .active {
-  color: var(--color-text-reverse);
+  color: var(--color-text--reverse);
 }
 
 /**
@@ -81,7 +81,7 @@
 
 .level2 .pageLabel.active,
 .level2 .pageLabel:hover {
-  color: var(--color-text-reverse);
+  color: var(--color-text--reverse);
 }
 
 .level2 .pageLabel.active::before {
