--- a/packages/components/src/Chips/InternalChip.css
+++ b/packages/components/src/Chips/InternalChip.css
@@ -44,23 +44,35 @@
   grid-template-columns: min-content max-content min-content;
 }
 
-.chip:focus-within {
-  outline: none;
-}
-
-.clickable {
+.clickable,
+.input ~ .chip {
   box-shadow: var(--shadow-base);
   cursor: pointer;
 }
 
-.clickable:focus-within,
-.clickable:hover {
+/**
+ * Interaction
+ */
+
+.chip:focus,
+.input:focus ~ .chip {
+  outline: none;
+}
+
+.clickable:focus,
+.input:focus ~ .chip {
+  box-shadow: var(--shadow-focus);
+}
+
+.clickable:hover,
+.clickable:focus,
+.input:focus ~ .chip:not(.active) {
   background-color: var(--color-surface--hover);
 }
 
-.clickable:focus-within {
-  box-shadow: var(--shadow-focus);
-}
+/**
+ * States
+ */
 
 .chip.active {
   border-color: var(--color-surface--reverse);
@@ -90,8 +102,13 @@
   border-color: var(--color-critical);
 }
 
+/**
+ * Input checkbox/radio
+ *
+ * Hide checkbox on UI but not screen readers and still allow focus state
+ */
+
 .input {
-  /* Hide checkbox on UI but not screen readers and still allow focus state */
   position: absolute;
   width: 1px;
   height: 1px;
@@ -101,13 +118,18 @@
   white-space: nowrap;
 }
 
+/**
+ * Button
+ */
+
 .button {
   border-radius: var(--radius-base);
   cursor: pointer;
   transition: background-color 200ms ease;
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
   background-color: var(--color-surface--hover);
 }
 
