make icon and button not have whitespace

--- a/packages/components/src/Chips/InternalChip.css
+++ b/packages/components/src/Chips/InternalChip.css
@@ -123,6 +123,7 @@
  */
 
 .button {
+  display: flex;
   border-radius: var(--radius-base);
   cursor: pointer;
   transition: background-color 200ms ease;
@@ -149,4 +150,8 @@
 
 .icon > svg {
   fill: var(--color-text--secondary);
+}
+
+.icon {
+  display: flex;
 }
