feat(design): add Typography letter spacing to @jobber/design [JOB-29564] (#668)
* Add @jobber/design typography

* Update @jobber/components, @jobber/design, and @jobber/hooks

* Random changes to make lerna work

* write typography docs

- keep mostly high-level as this shouldn't be about the underlying typography components

* use playground propertly

* Use components as examples

* Fix typo for color white

* Add letterSpacing to jobber design

* Change rgb to rgba because postcss-custom-properties can't resolve vars for rgb

* update docs to have more relevant examples

* address JoshThoughts

* add proper typography values to typography css

* remove leftover mobile typography sizing in old component Typography

* random change

* move typography css back to Typography component

Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>
Co-authored-by: Lori-Anne Morgan <lori-anne.m@getjobber.com>

--- a/packages/design/src/foundation.css
+++ b/packages/design/src/foundation.css
@@ -5,4 +5,5 @@
 @import "./shadows.css";
 @import "./timings.css";
 @import "./elevations.css";
+@import "./typography.css";
 @import "./responsiveBreakpoints.css";
