--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -115,7 +115,7 @@
   --color-grey--dark: rgb(118, 118, 118);
 
   --color-greyBlue--rgb: 101, 120, 132;
-  --color-greyBlue: rgb(var(--color-greyBlue--rgb));
+  --color-greyBlue: rgba(var(--color-greyBlue--rgb), 1);
   --color-greyBlue--light: rgb(147, 161, 169);
   --color-greyBlue--lighter: rgb(193, 201, 206);
   --color-greyBlue--lightest: rgb(232, 235, 237);
@@ -170,5 +170,5 @@
   --color-indigo--dark: rgb(55, 69, 132);
 
   --color-white--rgb: 255, 255, 255;
-  --color-white: rgba(var(--color-white--rgb));
+  --color-white: rgba(var(--color-white--rgb), 1);
 }
