added vertical option for divider, refactored test cases, added examples for options for divider docs

--- a/packages/components/src/Divider/Divider.css
+++ b/packages/components/src/Divider/Divider.css
@@ -8,3 +8,14 @@
 .large {
   border-bottom-width: var(--border-large);
 }
+
+.vertical {
+  width: var(--space-minuscule);
+  height: auto;
+  border-bottom: none;
+  border-right: var(--border-base) solid var(--color-border);
+}
+
+.vertical.large {
+  border-right-width: var(--border-large);
+}
